delete unused methods and some code clean